# my_ntl

./: CMakeLists.txt  Makefile
benchmark/: CMakeLists.txt  UBigIntBenchmarks.cc
src/: CMakeLists.txt  UBigInt.cc  UBigInt.h
src/fft/: CMakeLists.txt  cyclotomic-poly.cc  cyclotomic-poly.h  main.cc  main2.cc  my-fft.cc  my-ftt.h  my-ntt.cc  my-ntt.h
tests/: AddWithCarryTests.cc  CMakeLists.txt  CeilIntTests.cc  CyclotomicPolyTests.cc  FftTests.cc  UBigIntTests.cc
